@@ -1,3 +1,4 @@
+import java.awt.image.CropImageFilter;
 import java.io.BufferedReader;
 import java.io.FileReader;
 import java.util.LinkedList;
@@ -8,6 +9,8 @@ public class Main {
     String filePath = "D:\\JAVAA\\uni\\Sir Mohsin Project\\India Agriculture Crop Production.csv";
     LinkedList<States> allStates = new LinkedList<>();
     Stack<CropCountData> cropCount = new Stack<>();
+
+    // step 1
     public void storingStates() {
 
         try (BufferedReader reader = new BufferedReader(new FileReader(filePath))) {
@@ -44,19 +47,36 @@ public class Main {
         }
     }
 
+    // step 2
     void setCropCount(LinkedList<Crops> cropData) {
-        Crops tempDuplicate = cropData.get(0);
+        Crops tempDuplicate = cropData.getFirst();
         int counter = 0;
 
-        for(Crops crop: cropData) {
+        for (int i = 1; i < cropData.size(); i++) {
+            Crops crop = cropData.get(i);
             if(tempDuplicate.equals(crop)) {
                 counter++;
             } else {
-                cropCount.add(new CropCountData(tempDuplicate.getCropName(), counter));
+                if(cropCount.isEmpty()) {
+                    cropCount.push(new CropCountData(tempDuplicate.getCropName(), counter));
+                } else {
+                    setSequenceOfCrop();
+                }
                 tempDuplicate = crop;
                 counter = 0;
             }
         }
+    }
+
+    //step 2
+    void setSequenceOfCrop() {
+//      int highCount = cropCount.firstElement().getCropCount();
+//
+//      for(CropCountData data : cropCount) {
+//          if(highCount<data.getCropCount()) {
+//              cropCount.peek();
+//          }
+//      }
     }
 
     public static void main(String[] args) {
